--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-bootstrap-md": "^6.3.0",
+    "angular-ui-carousel": "^0.1.10",
+    "bootstrap": "^3.3.7",
+    "bootstrap-4-migrate": "^1.0.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
