--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-4-migrate": "^1.0.1",
     "core-js": "^2.5.4",
+    "ngx-bootstrap": "^3.1.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
