--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "angular-bootstrap-md": "^6.3.0",
     "angular-ui-carousel": "^0.1.10",
     "bootstrap": "^3.3.7",
