--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "angular-bootstrap-md": "^6.3.0",
     "angular-ui-carousel": "^0.1.10",
+    "bootstrap": "^4.1.3",
     "bootstrap-4-migrate": "^1.0.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
