--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "angular-bootstrap-md": "^6.3.0",
     "angular-ui-carousel": "^0.1.10",
+    "bootstrap": "^4.2.1",
     "bootstrap-4-migrate": "^1.0.1",
     "core-js": "^2.5.4",
-    "ngx-bootstrap": "^3.1.2",
     "rxjs": "~6.3.3",
+    "uninstall": "0.0.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
